// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`URL prefix and suffix success 1`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foo-bar@01234567",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo",
}
`;

exports[`URL prefix and suffix success 2`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foo-bar@01234567",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo/bar/123",
}
`;

exports[`URL prefix success 1`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foo-bar@01234567",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo",
}
`;

exports[`URL prefix success 2`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foo-bar@01234567",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo",
}
`;

exports[`URL prefix success 3`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foo-bar@01234567",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo/bar/456/123",
}
`;

exports[`URL prefix success 4`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foo-bar@01234567",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo/bar/456/123",
}
`;

exports[`URL prefix success 5`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foo-bar@01234567",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo/bar/456/123",
}
`;

exports[`URL prefix success 6`] = `
{
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo/bar/456/123",
  "version": "latest",
}
`;

exports[`URL prefix success 7`] = `
{
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo/bar/456/123",
  "version": "dev",
}
`;

exports[`URL prefix success 8`] = `
{
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo/bar/456/123",
  "version": "2.1.0",
}
`;

exports[`URL suffix success 1`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foo-bar@01234567",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo",
}
`;

exports[`URL suffix success 2`] = `
{
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo",
  "version": "latest",
}
`;

exports[`URL suffix success 3`] = `
{
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo",
  "version": "dev",
}
`;

exports[`URL suffix success 4`] = `
{
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo",
  "version": "2.1.0",
}
`;

exports[`namespace success 1`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foo-bar@01234567",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo",
}
`;

exports[`namespace success 2`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foo-bar@01234567",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo",
}
`;

exports[`namespace success 3`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foo-bar@01234567",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo",
}
`;

exports[`namespace success 4`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foo-bar@01234567",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo",
}
`;

exports[`namespace success 5`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foo-bar@01234567",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo/bar/123",
}
`;

exports[`namespace success 6`] = `
{
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo/bar/123",
  "version": "latest",
}
`;

exports[`namespace success 7`] = `
{
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo/bar/123",
  "version": "dev",
}
`;

exports[`namespace success 8`] = `
{
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo/bar/123",
  "version": "1.2.3",
}
`;

exports[`namespace success 9`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foo-bar@01234567",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo/bar/123",
}
`;
